--- a/presentation/about-us/index.html
+++ b/presentation/about-us/index.html
@@ -76,6 +76,7 @@
 <!--						<p class="content__item-description">There are no limits in this world.</p>-->
 <!--					</div>-->
 					<p class="credits">Presented by <span>Group9</span></p>
+					<p class="credits" style="font-size: 14px"><a href="../about.html" style="color: #b70000;">More Information...</a></span></p>
 				</div>
 			</div>
 		</main>
