--- a/presentation/employee-style.html
+++ b/presentation/employee-style.html
@@ -30,7 +30,7 @@
 <!--PRELOADER-->
 <div id="preloader">
     <div id="status">
-        <img alt="logo" src="images/logo-big.png">
+        <img alt="logo" src="../images/logo.png">
     </div>
 </div>
 
