--- a/presentation/about.html
+++ b/presentation/about.html
@@ -31,7 +31,7 @@
 <!--PRELOADER-->
 <div id="preloader">
 	<div id="status">
-		<img alt="logo" src="images/logo-big.png">
+		<img alt="logo" src="../images/logo.png">
 	</div>
 </div>
 
