--- a/presentation/employee-style.html
+++ b/presentation/employee-style.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Bodo</title>
+    <title>About Us</title>
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="Bodo - Simple One Page Personal" name="description">
@@ -10,12 +10,13 @@
 
 
     <!--styles-->
-    <link href="/style/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/style/css/owl.carousel.css" rel="stylesheet">
-    <link href="/style/css/owl.theme.css" rel="stylesheet">
-    <link href="/style/css/magnific-popup.css" rel="stylesheet">
-    <link href="/style/css/style.css" rel="stylesheet">
-    <link href="/style/css/responsive.css" rel="stylesheet">
+    <link href="../style/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../style/css/owl.carousel.css" rel="stylesheet">
+    <link href="../style/css/owl.theme.css" rel="stylesheet">
+    <link href="../style/css/magnific-popup.css" rel="stylesheet">
+    <link href="../style/css/style.css" rel="stylesheet">
+    <link href="../style/css/responsive.css" rel="stylesheet">
+    <link rel="shortcut  icon" href="../images/favicon.ico" type="image/x-icon" />
 
 
     <!--fonts google-->
@@ -47,7 +48,7 @@
     <!--CONTENT-->
     <div class="content">
         <!--HOME-->
-        <section id="home">
+        <section id="home" style="background-image: url('../images/background.png');">
             <div class="container">
                 <div class="row">
                     <div class="wrap-hero-content">
@@ -497,16 +498,16 @@
 </div>
 
 
-<script src="/js/jquery-1.9.1.min.js" type="text/javascript"></script>
-<script src="/js/jquery.appear.js" type="text/javascript"></script>
-<script src="/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="/js/classie.js" type="text/javascript"></script>
-<script src="/js/owl.carousel.min.js" type="text/javascript"></script>
-<script src="/js/jquery.magnific-popup.min.js" type="text/javascript"></script>
-<script src="/js/masonry.pkgd.min.js" type="text/javascript"></script>
-<script src="/js/masonry.js" type="text/javascript"></script>
-<script src="/js/smooth-scroll.min.js" type="text/javascript"></script>
-<script src="/js/typed.js" type="text/javascript"></script>
-<script src="/js/main.js" type="text/javascript"></script>
+<script src="../style/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+<script src="../style/js/jquery.appear.js" type="text/javascript"></script>
+<script src="../style/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="../style/js/classie.js" type="text/javascript"></script>
+<script src="../style/js/owl.carousel.min.js" type="text/javascript"></script>
+<script src="../style/js/jquery.magnific-popup.min.js" type="text/javascript"></script>
+<script src="../style/js/masonry.pkgd.min.js" type="text/javascript"></script>
+<script src="../style/js/masonry.js" type="text/javascript"></script>
+<script src="../style/js/smooth-scroll.min.js" type="text/javascript"></script>
+<script src="../style/js/typed.js" type="text/javascript"></script>
+<script src="../style/js/main.js" type="text/javascript"></script>
 </body>
 </html>
