--- a/presentation/employee-style.html
+++ b/presentation/employee-style.html
@@ -14,7 +14,7 @@
     <link href="../style/css/owl.carousel.css" rel="stylesheet">
     <link href="../style/css/owl.theme.css" rel="stylesheet">
     <link href="../style/css/magnific-popup.css" rel="stylesheet">
-    <link href="../style/css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
     <link href="../style/css/responsive.css" rel="stylesheet">
     <link rel="shortcut  icon" href="../images/favicon.ico" type="image/x-icon" />
 
